--- a/.github/workflows/matlab-tests.yml
+++ b/.github/workflows/matlab-tests.yml
@@ -1,6 +1,11 @@
 name: MATLAB Tests
 
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - testing
+  pull_request:
+      - testing
 
 jobs:
   matlab-test:
@@ -15,7 +20,7 @@ jobs:
       - name: Run MATLAB Tests
         uses: matlab-actions/run-tests@v2
         with:
-          source-folder: .
+          source-folder: ./tests
           test-results-junit: test-results/results.xml
       
       - name: Upload Test Results
