--- a/.github/workflows/matlab-tests.yml
+++ b/.github/workflows/matlab-tests.yml
@@ -11,21 +11,27 @@ on:
 jobs:
   matlab-test:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        test-file:
+          - testConstitutiveModel.m
+          - testPSO.m
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
-      
+
       - name: Set up MATLAB
         uses: matlab-actions/setup-matlab@v2
-      
-      - name: Run MATLAB Tests
+
+      - name: Run MATLAB Test
         uses: matlab-actions/run-tests@v2
         with:
           source-folder: ./tests
-          test-results-junit: test-results/results.xml
-      
+          select-by-folder: ./tests/${{ matrix.test-file }}
+          test-results-junit: test-results/results_${{ matrix.test-file }}.xml
+
       - name: Upload Test Results
         uses: actions/upload-artifact@v4
         with:
-          name: test-results
-          path: test-results/results.xml
+          name: test-results-${{ matrix.test-file }}
+          path: test-results/results_${{ matrix.test-file }}.xml
