--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -1,15 +1,29 @@
-rule run_pso_optimization:
+#TODO: fix this
+rule all:
     input:
-        metadata="src/PSO/PSOSetup/{metadata}.dat"
+        expand("src/PSO/OptimizationResults/FMG_FMG/{metadata}_result.mat", metadata=["FMG_FMG_20HS_00GnP", "FMG_FMG_20HS_05GnP"])
+
+#TODO: test this
+rule run_pso_optimization_fmg:
+    input:
+        FMG="src/PSO/PSOSetup/FMG_FMG_{metadata}.dat"
     output:
-        optimization_result="src/PSO/OptimizationResults/FMG_FMG/{metadata}_result.mat"
+        "src/PSO/OptimizationResults/FMG_FMG/{metadata}_result.mat",
     params:
         matlab_executable="/Applications/MATLAB_R2024b.app/bin/matlab"
     script:
         """
-        {params.matlab_executable} -nodisplay -nosplash -r "try, main_loop_hpcc_function('{input.metadata}'), catch, exit(1), end, exit(0)"
+        {params.matlab_executable} -nodisplay -nosplash -r "try, main_loop_hpcc_function('FMG_FMG_{wildcards.metadata}'), catch, exit(1), end, exit(0)"
         """
 
-rule all:
+rule run_pso_optimization_fmm:
     input:
-        expand("src/PSO/OptimizationResults/FMG_FMG/{metadata}_result.mat", metadata=["FMG_FMG_20HS_00GnP", "FMG_FMG_20HS_05GnP"])
+        FMM="src/PSO/PSOSetup/FMM_FMG_{metadata}.dat"
+    output:
+        "src/PSO/OptimizationResults/FMM_FMG/{metadata}_result.mat"
+    params:
+        matlab_executable="/Applications/MATLAB_R2024b.app/bin/matlab"
+    script:
+        """
+        {params.matlab_executable} -nodisplay -nosplash -r "try, main_loop_hpcc_function('FMM_FMG_{wildcards.metadata}'), catch, exit(1), end, exit(0)"
+        """
