Add log and modify the script

--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -12,14 +12,11 @@ rule run_pso_optimization_fmg:
     params:
         matlab_function = "main_loop_hpcc_function",
         matlab_path="/Applications/MATLAB_R2024b.app/bin/matlab"
+    log:
+        "logs/run_pso_fmg_{metadata}.log"
     script:
         """
-        {params.matlab_path} -nodisplay -nosplash -r 
-        try, 
-            {params.matlab_function}('FMG_FMG_{wildcards.metadata}'), 
-        catch ME, 
-            disp(ME.message)
-            exit(1),
-        end;
-        exit;"
+        "{params.matlab_path}" -nodisplay -nosplash -r \
+        "try, {params.matlab_function}('FMG_FMG_{wildcards.metadata}'), \
+        catch ME, disp(ME.message), exit(1), end; exit;" &> {log}
         """
