--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -11,10 +11,10 @@ rule run_pso_optimization_fmg:
         "../src/PSO/OptimizationResults/FMG_FMG/Opt_FMG_{metadata}.mat",
     params:
         matlab_function = "main_loop_hpcc_function",
-        matlab_path="/Applications/MATLAB_R2024b.app/bin/matlab"
+        matlab_path = "/Applications/MATLAB_R2024b.app/bin/matlab"
     log:
         "logs/run_pso_fmg_{metadata}.log"
-    script:
+    shell:
         """
         "{params.matlab_path}" -nodisplay -nosplash -r \
         "try, {params.matlab_function}('FMG_FMG_{wildcards.metadata}'), \
