--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -24,7 +24,5 @@ rule run_pso_optimization_fmg:
         cpu_per_task=config["default-resources"]["cpus_per_task"]
     shell:
         """
-        module load MATLAB/2023b && \
-        cd ../src/PSO && \
-        matlab -nodisplay -nosplash -r "try; {params.matlab_function}('FMG_FMG_{wildcards.metadata}'); catch ME; disp(ME.message); exit(1); end; exit;" >& ../../workflow/{log}
+        bash run_matlab.sh ../src/PSO "{params.matlab_function}('FMG_FMG_{wildcards.metadata}')" "../../workflow/{log}"
         """
