--- a/workflow/slurm/config.yaml
+++ b/workflow/slurm/config.yaml
@@ -8,10 +8,8 @@ jobs: 20
 default-resources:
     account: "general"  # or netid
     partition: "normal"
-    time: "01:00:00"  # HH:MM:SS
+    runtime: 60  # in minutes
     nodes: 1
     ntask: 1
     cpus_per_task: 8
-    mem: "16G"
-    # output: "slurm_logs/%x_%j.out" # Logs with job name (%x) and job ID (%j)
-    # error: "slurm_logs/%x_%j.err"
+    mem_mb: 8000  # in megabyte
