--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,1 +1,10 @@
-site_name: My Docs
+site_name: RCW Project
+site_url: https://armankhoshnevis.github.io/RCW_Proejct/
+theme:
+  name: material
+nav:
+  - Home: index.md
+  - Installation: installation.md
+  - Usage: usage.md
+  - API Reference: api.md
+repo_url: https://github.com/armankhoshnevis/RCW_Proejct
