--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,7 +4,23 @@ theme:
   name: material
 nav:
   - Home: index.md
-  - Installation: installation.md
-  - Usage: usage.md
-  - API Reference: api.md
+  - Tutorials: tutorials/index.md
+  - How-to Guides: how-to-guides/index.md
+  - Explanation:
+    - Overview: explanation/index.md
+    - main_loop_hpcc_function.m: explanation/main_loop_hpcc_function.md
+    - PSO.m: explanation/PSO.md
+    - Constitutive_Model.m: explanation/Constitutive_Model.md
+    - Cost_Function.m: explanation/Cost_Function.md
+  - Reference: reference/index.md
 repo_url: https://github.com/armankhoshnevis/RCW_Proejct
+
+markdown_extensions:
+  - pymdownx.arithmatex:
+      generic: true
+  - pymdownx.arithmatex
+  - pymdownx.superfences
+  - pymdownx.inlinehilite
+
+extra_javascript:
+  - https://cdnjs.cloudflare.com/ajax/libs/mathjax/3.2.2/es5/tex-mml-chtml.js
