--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,7 +5,10 @@ theme:
 nav:
   - Home: index.md
   - Tutorials: tutorials/index.md
-  - How-to Guides: how-to-guides/index.md
+  - How-to Guides:
+    - Overview: how-to-guides/index.md
+    - Run on a Local Machine: how-to-guides/local_machine.md
+    - Run on a HPCC (working with Slurm Job Scheduler): how-to-guides/hpcc.md
   - Explanation:
     - Overview: explanation/index.md
     - main_loop_hpcc_function.m: explanation/main_loop_hpcc_function.md
